[tool.poetry]
name = "py-vptree"
version = "0.1.0"
description = "A Python library to create vantage point trees (VP-trees)"
authors = ["Nyeki.py <hello@nyeki.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_vptree"}]

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
